--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
 
+    <string name="filter">Filter</string>
+
     <string name="pantry">Pantry</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
