--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
 
+    <string name="email">Email</string>
+
+
     <string name="filter">Filter</string>
 
     <string name="pantry">Pantry</string>
