--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="login">Login</string>
 
     <string name="email">Email</string>
+    <string name="recipes">Recipes</string>
 
 
     <string name="filter">Filter</string>
